--- a/README
+++ b/README
@@ -17,16 +17,7 @@ up the folder structure, you must create a project within the directory.
 
 I have preserved the original ProjectTemplate README below.
 
-- Abbott
-
-----
-
-Welcome to ProjectTemplate!
-
-This file introduces you to ProjectTemplate, but you should eventually replace
-the contents of this file with an introduction to your project. People who
-work with your data in the future will thank you for it, including your future
-self.
+- Tayler
 
 ProjectTemplate is an R package that helps you organize your statistical
 analysis projects. Since you're reading this file, we'll assume that you've
